fix: mobile nav aligned right

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -206,6 +206,11 @@ button {
     margin: 0 auto;
 }
 
+.navbar-collapse {
+    width: 100%;
+    text-align: right;
+}
+
 .navbar-mr {
     margin-right: 96px;
 }
